cleanup
some renaming, some DRY